--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>br.com.rsinet.hub_tdd.testes.BuscaPelaPaginaInicial</td>
+<td>br.com.rsinet.hub_tdd.testes.CadastroUsuarioSucesso</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>pesquisaPaginaInicial</td>
+<td>CadastroComSucesso</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
