--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>20/01/20 13:16:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BuscaPelaPaginaInicial.beforeMethod()[pri:0, instance:br.com.rsinet.hub_tdd.testes.BuscaPelaPaginaInicial@31ef45e3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@3213500</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>20/01/20 13:16:19</td>   <td>11283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuscaPelaPaginaInicial.pesquisaPaginaInicial()[pri:0, instance:br.com.rsinet.hub_tdd.testes.BuscaPelaPaginaInicial@31ef45e3]">pesquisaPaginaInicial</td> 
-  <td>main@3213500</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>20/01/20 13:16:23</td>   <td>15622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BuscaPelaPaginaInicial.afterMethod()[pri:0, instance:br.com.rsinet.hub_tdd.testes.BuscaPelaPaginaInicial@31ef45e3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@3213500</td>   <td></td> </tr>
+<tr bgcolor="e8b466">  <td>20/01/24 17:08:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CadastroUsuarioSucesso.beforeMethod()[pri:0, instance:br.com.rsinet.hub_tdd.testes.CadastroUsuarioSucesso@ae45eb6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
+<tr bgcolor="e8b466">  <td>20/01/24 17:08:32</td>   <td>11217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CadastroUsuarioSucesso.CadastroComSucesso()[pri:0, instance:br.com.rsinet.hub_tdd.testes.CadastroUsuarioSucesso@ae45eb6]">CadastroComSucesso</td> 
+  <td>main@1061804750</td>   <td></td> </tr>
+<tr bgcolor="e8b466">  <td>20/01/24 17:08:38</td>   <td>17705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CadastroUsuarioSucesso.afterMethod()[pri:0, instance:br.com.rsinet.hub_tdd.testes.CadastroUsuarioSucesso@ae45eb6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
 </table>
